[package]
name = "cryptominisat"
version = "5.6.5"
authors = ["Robert Grosse <n210241048576@gmail.com>"]
links = "cryptominisat5"
build = "build.rs"
license = "MIT"
readme = "README.markdown"

repository = "https://github.com/storyyeller/cryptominisat-rs"
description = "Rust bindings for Cryptominisat, a boolean satisfiability solver"
keywords = ["SAT"]

exclude = [
    "cryptominisat/debian/*",
    "cryptominisat/docs/*",
    "cryptominisat/scripts/*",
    "cryptominisat/tests/*",
    "cryptominisat/utils/*",
    "cryptominisat/web/*",
]


[dependencies]
libc = "0.2.0"

[build-dependencies]
cmake = "0.1.17"
